@@ -1,0 +1,6 @@
+galpy.potential.Potential.rhalf
+===============================
+
+.. automethod:: galpy.potential.Potential.rhalf
+
+
