@@ -1,0 +1,5 @@
+galpy.potential.rhalf
+=====================
+
+.. autofunction:: galpy.potential.rhalf
+
