@@ -119,6 +119,7 @@ flatten= Potential.flatten
 to_amuse= Potential.to_amuse
 zvc= Potential.zvc
 zvc_range= Potential.zvc_range
+rhalf= Potential.rhalf
 #
 # Classes
 #
