@@ -1556,6 +1556,7 @@ def test_potential_method_returntype():
     assert isinstance(pot.ttensor(1.,0.,eigenval=True),units.Quantity), 'Potential method ttensor does not return Quantity when it should'
     assert isinstance(pot.zvc_range(-1.9,0.2),units.Quantity), 'Potential method zvc_range does not return Quantity when it should'
     assert isinstance(pot.zvc(0.4,-1.9,0.2),units.Quantity), 'Potential method zvc does not return Quantity when it should'
+    assert isinstance(pot.rhalf(),units.Quantity), 'Potential method rhalf does not return Quantity when it should'
     return None
 
 def test_dissipativeforce_method_returntype():
@@ -1706,6 +1707,10 @@ def test_potential_method_returnunit():
         pot.zvc(0.4,-1.9,0.2).to(units.kpc)
     except units.UnitConversionError:
         raise AssertionError('Potential method zvc does not return Quantity with the right units')
+    try:
+        pot.rhalf().to(units.kpc)
+    except units.UnitConversionError:
+        raise AssertionError('Potential method rhalf does not return Quantity with the right units')
     return None
 
 def test_planarPotential_method_returnunit():
@@ -1804,6 +1809,7 @@ def test_potential_method_value():
     assert numpy.all(numpy.fabs(pot.ttensor(1.,0.,eigenval=True).to(units.km**2/units.s**2./units.kpc**2).value-potu.ttensor(1.,0.,eigenval=True)*vo**2./ro**2.) < 10.**-8.), 'Potential method ttensor does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(pot.zvc_range(-1.9,0.2).to(units.kpc).value-potu.zvc_range(-1.9,0.2)*ro) < 10.**-8.), 'Potential method zvc_range does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(pot.zvc(0.4,-1.9,0.2).to(units.kpc).value-potu.zvc(0.4,-1.9,0.2)*ro) < 10.**-8.), 'Potential method zvc_range does not return the correct value as Quantity'
+    assert numpy.fabs(pot.rhalf().to(units.kpc).value-potu.rhalf()*ro) < 10.**-8., 'Potential method rhalf does not return the correct value as Quantity'
     return None
 
 def test_planarPotential_method_value():
@@ -1864,6 +1870,7 @@ def test_potential_function_returntype():
     assert isinstance(potential.ttensor(pot,1.,0.,eigenval=True),units.Quantity), 'Potential function ttensor does not return Quantity when it should'
     assert isinstance(potential.zvc_range(pot,-1.9,0.2),units.Quantity), 'Potential function zvc_range does not return Quantity when it should'
     assert isinstance(potential.zvc(pot,0.4,-1.9,0.2),units.Quantity), 'Potential function zvc does not return Quantity when it should'
+    assert isinstance(potential.rhalf(pot),units.Quantity), 'Potential function rhalf does not return Quantity when it should'
     return None
 
 def test_planarPotential_function_returntype():
@@ -1994,6 +2001,10 @@ def test_potential_function_returnunit():
         potential.zvc(pot,0.4,-1.9,0.2).to(units.kpc)
     except units.UnitConversionError:
         raise AssertionError('Potential function zvc does not return Quantity with the right units')
+    try:
+        potential.rhalf(pot).to(units.kpc)
+    except units.UnitConversionError:
+        raise AssertionError('Potential function rhalf does not return Quantity with the right units')
     return None
 
 def test_planarPotential_function_returnunit():
@@ -2086,6 +2097,7 @@ def test_potential_function_value():
     assert numpy.all(numpy.fabs(potential.ttensor(pot,1.,0.,eigenval=True).to(units.km**2/units.s**2/units.kpc**2).value-potential.ttensor(potu,1.,0.,eigenval=True)*vo**2/ro**2) < 10.**-8.), 'Potential function ttensor does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(potential.zvc_range(pot,-1.9,0.2).to(units.kpc).value-potential.zvc_range(potu,-1.9,0.2)*ro) < 10.**-8.), 'Potential function zvc_range does not return the correct value as Quantity'
     assert numpy.all(numpy.fabs(potential.zvc(pot,0.4,-1.9,0.2).to(units.kpc).value-potential.zvc(potu,0.4,-1.9,0.2)*ro) < 10.**-8.), 'Potential function zvc_range does not return the correct value as Quantity'
+    assert numpy.fabs(potential.rhalf(pot).to(units.kpc).value-potential.rhalf(potu)*ro) < 10.**-8., 'Potential function rhalf does not return the correct value as Quantity'
     return None
 
 def test_planarPotential_function_value():
